<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Controller.SkillActivity">

    <Button
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:id="@+id/skill_finish_button" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"
            android:layout_marginBottom="16dp" app:layout_constraintBottom_toBottomOf="@+id/imageView"
            android:fontFamily="@font/montserrat" android:textColor="@android:color/white"
            android:background="@drawable/swoosh_button" android:textSize="18sp" android:textAlignment="center"
            android:text="@string/finish" android:onClick="onSkillFinsheClick"/>
    <ImageView
            android:layout_width="0dp"
            android:layout_height="0dp" app:srcCompat="@drawable/beginnerballerbg"
            android:id="@+id/imageView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" android:scaleType="centerCrop"
            app:layout_constraintHorizontal_bias="1.0" app:layout_constraintVertical_bias="1.0"
            android:contentDescription="@string/background_image"/>
    <ImageView
            android:layout_width="88dp"
            android:layout_height="29dp" app:srcCompat="@drawable/swooshlogo"
            android:id="@+id/imageView4"
            app:layout_constraintTop_toTopOf="@+id/imageView" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" android:layout_marginTop="32dp" android:scaleType="fitCenter"
            android:contentDescription="@string/logo"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView5" android:text="@string/iama"
            android:textColor="@android:color/white" android:textSize="18sp" android:layout_marginTop="48dp"
            app:layout_constraintTop_toBottomOf="@+id/imageView4" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.498"
            android:fontFamily="@font/montserrat"/>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="32dp" app:layout_constraintTop_toBottomOf="@+id/textView5">
        <ToggleButton
                android:text="@string/beginner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/beginner_skill_button" android:layout_weight="1"
                android:textOff="@string/beginner" android:textOn="@string/beginner"
                android:background="@drawable/swoosh_toogle" android:textColor="@android:color/white"
                android:textAllCaps="false" android:textSize="18sp" android:fontFamily="@font/montserrat"
                android:textStyle="bold" android:layout_marginLeft="16dp" android:layout_marginRight="16dp"
                android:onClick="onBeginnerClick"/>
        <ToggleButton
                android:text="@string/baller"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/baller_skill_button" android:layout_weight="1"
                android:textOff="@string/baller" android:textOn="@string/baller"
                android:background="@drawable/swoosh_toogle" android:textColor="@android:color/white"
                android:textAllCaps="false" android:textSize="18sp" android:fontFamily="@font/montserrat"
                android:textStyle="bold" android:layout_marginLeft="16dp" android:layout_marginRight="16dp"
                android:onClick="onBallerClick"/>
    </LinearLayout>
    <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp" app:srcCompat="@drawable/ic_arrow_back_black_24dp"
            android:id="@+id/ic_back"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"
            android:layout_marginTop="32dp" app:layout_constraintTop_toTopOf="parent" android:onClick="goBackActivity"
            android:contentDescription="@string/background_image"/>
</android.support.constraint.ConstraintLayout>